@@ -9,6 +9,7 @@ CONTRACT_TYPE
     // Contract text details
     title = Simple Test Contract
     description = A more detailed description of the contract.  This is where you come in.
+    notes = These are the contract level notes.
     synopsis = We want you to do a thing.
     completedMessage = You have done the thing.
 
